samples/_failures_safe/1761668353_8df8da_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4d680f58.c: In function ‘main’:
./samples/SAFE/__tmp_4d680f58.c:158:9: error: expected expression at end of input
  158 |         if (process_input(sm, input[0]))
      |         ^~
./samples/SAFE/__tmp_4d680f58.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4d680f58.c:158:9: error: expected declaration or statement at end of input
